Fix Forbidden API warning about Class#newInstance() being deprecated in Java 15